fix view more not showing on bigger resolutions

--- a/web/styles/_helpers.scss
+++ b/web/styles/_helpers.scss
@@ -116,9 +116,6 @@ $radius: "0", "2px", "4px", "8px", "10px", "14px", "16px", "24px", "35px";
 
 .has-footer-margin {
   margin-bottom: 80px;
-  @media screen and  (min-width: 1800px) and (max-width: 3000px)  {
-    margin-bottom: 0px;
-  }
   @media screen and (max-width: 1350px) {
     margin-bottom: 150px;
   }
